[gd_scene load_steps=10 format=3 uid="uid://bcan22jdsve4m"]

[ext_resource type="Script" path="res://scripts/MiniBoss.gd" id="1_sgal0"]
[ext_resource type="PackedScene" uid="uid://dgpp7qyr0kk7w" path="res://assets/scenes/enemies/bullet.tscn" id="2_aydyo"]
[ext_resource type="Texture2D" uid="uid://cwffjq8qf07g1" path="res://assets/textures/pruebaBoss.png" id="2_pp3cs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h5jfm"]
atlas = ExtResource("2_pp3cs")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fit04"]
atlas = ExtResource("2_pp3cs")
region = Rect2(0, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_b8fs3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5jfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fit04")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3wkqr"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_irsqk"]
radius = 36.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bmdh3"]
radius = 6.0

[node name="MiniBoss" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_sgal0")
Bullet = ExtResource("2_aydyo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_b8fs3")
animation = &"idle"

[node name="AreaDamage" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDamage"]
shape = SubResource("CircleShape2D_3wkqr")

[node name="AreaFollow" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaFollow"]
shape = SubResource("CircleShape2D_irsqk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bmdh3")

[node name="Timer" type="Timer" parent="."]

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, 7)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="AreaDamage" to="." method="_on_area_damage_body_entered"]
[connection signal="body_entered" from="AreaFollow" to="." method="_on_area_follow_body_entered"]
[connection signal="body_exited" from="AreaFollow" to="." method="_on_area_follow_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
